# aria-agent

./: README.md  main.py  pyproject.toml
docs/: BACKLOG.md  native-function-calling-spec.md
src/aria/: __init__.py  agent.py  agent.py.bak  channel.py  config.py  install.py  main.py  project.py  reflect.py  setup.py  supervisor.py  task.py  telegram_bot.py  telegram_notify.py  whatsapp_bridge.py  workspace.py
src/aria/tools/: __init__.py  _env.py  _net.py  browser.py  calendar.py  code_search.py  drive.py  file_access.py  git.py  gmail.py  imap.py  jira.py  learn.py  notify.py  plan.py  reflect.py  remember.py  schedule.py  shell_run.py  update.py  web_fetch.py
tests/: conftest.py  test_agent_loop.py  test_browser_human.py  test_code_tools.py  test_correctness.py  test_file_edit.py  test_imports.py  test_native_tools.py  test_plan.py  test_project.py  test_reflect.py  test_security.py  test_shell_trust.py  test_telegram_bridge.py  test_tool_args.py  test_tools_quality.py  test_update.py  test_workspace.py
whatsapp/: bridge.js  package.json
